tests/baselines/reference/unusedMultipleParameter1InContructor.errors.txt
tests/cases/compiler/unusedMultipleParameter1InContructor.ts(4,13): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameter1InContructor.ts (1 errors) ====
    
    class Dummy {
        constructor(person: string, person2: string) {
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
            person2 = "Dummy value";
        }
    }